const_typed_builder_test/compile_fail/group_1.stderr
error: Group cannot be satisfied
 --> ./compile_fail/group_1.rs:5:13
  |
5 |     #[group(baz = at_least(2))]
  |             ^^^
